--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 /* sfondo */
 
 .first-box {
-    /* background-color: #D6DBD9; */
-    background-image: linear-gradient(to top, #d6dbd9, #b4c9c2, #91b7ad, #6ca599, #419388);
+    background: rgb(220,219,210);
+    background: linear-gradient(0deg, rgba(220,219,210,1) 85%, rgba(66,148,136,1) 85.2%);
     width: 100%;
     height: 100vh;
 }
@@ -183,24 +183,30 @@
 }
 
 .fumetto-bianco {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
 }
 
 .fumetto-bianco-text {
-    width: 200px;
     background-color: white;
     border-radius: 5px;
     padding: 10px;
 }
 
 .fumetto-verde {
-
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
 }
 
 .fumetto-verde-text {
-    width: 200px;
     background-color:rgb(220, 248, 192);
     border-radius: 5px;
     padding: 10px;
+    margin-bottom: 5px;
 }
 
 /* footer contentparte uno */
