--- a/css/style.css
+++ b/css/style.css
@@ -115,19 +115,33 @@
 /* contatti parte quattro */
 
 .box-contacts {
-    height: 300px;
     overflow-y: scroll;
+}
+
+.box-contacts-ul {
+    list-style: none;
+    padding: 0;
+}
+
+.box-contacts-ul li {
+    border-bottom: 1px solid lightgray;
+    padding: 8px;
+}
+
+.box-contacts-ul li:hover {
+    background-color: rgb(233, 235, 235);
+    cursor: pointer;
 }
 
 .sidebar-phone-contacts-avatar {
     width: 60px;
     height: 60px;
     border-radius: 50%;
+    vertical-align: top;
 }
 
 .sidebar-phone-contacts {
-    height: 60px;
-    padding-top: 5px;
+    padding-left: 10px;
 }
 
 /* CONTENT */
@@ -180,7 +194,7 @@
 
 .content-inner {
     background-image: url("../img/mine.jpg");
-    height: calc(500px - 60px);
+    height: calc(600px - 60px);
     overflow-y: scroll;
 }
 
@@ -188,13 +202,13 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
 }
 
 .fumetto-bianco-text {
     background-color: white;
     border-radius: 5px;
     padding: 10px;
+    color: black;
 }
 
 .fumetto-verde {
